--- a/package.json
+++ b/package.json
@@ -13,11 +13,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "grunt": "1.0.1",
-    "grunt-contrib-connect": "1.0.2",
-    "grunt-contrib-watch": "1.0.0",
-    "grunt-gh-pages": "2.0.0",
-    "serve-static": "1.11.1"
+    "connect-livereload": "0.5.2",
+    "connect-modrewrite": "0.9.0",
+    "grunt": "0.4.5",
+    "grunt-cli": "0.1.13",
+    "grunt-connect-proxy": "0.2",
+    "grunt-contrib-connect": "0.7.1",
+    "grunt-contrib-jshint": "0.11.3",
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-karma": "2.0.0",
+    "jasmine": "2.5.3",
+    "jasmine-core": "2.5.2",
+    "jasmine-reporters": "2.2.1",
+    "karma": "1.5.0",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-coverage": "1.1.1",
+    "karma-jasmine": "1.1.0",
+    "karma-junit-reporter": "1.2.0",
+    "karma-spec-reporter": "0.0.30",
+    "load-grunt-tasks": "3.0.0"
   },
   "bugs": {
     "url": "https://github.com/lukasss88/angularLoginApp/issues"
